# DApIA-DetectionAPI

./: .dockerignore  .gitignore  .openapi-generator-ignore  Dockerfile  LICENSE  README.md  dapia-detection-api.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish_docker.yaml  unit-tests.yml
.openapi-generator/: FILES
dapia_detection_api/: __main__.py  encoder.py  util.py
dapia_detection_api/controllers/: default_controller.py
dapia_detection_api/models/: __init__.py  adsb_message.py  aircraft_types.py  base_model.py  classify_aircraft_request.py  classify_aircrafts_request.py  data.py  data1.py  response200_classify_aircraft.py  response200_classify_aircraft1.py  response200_classify_aircraft_result_inner.py  response500_classify_aircraft.py  response500_classify_aircraft_result_inner.py  send_message_post200_response.py  send_message_post_request.py
dapia_detection_api/openapi/: openapi.yaml
dapia_detection_api/test/: __init__.py  test_default_controller.py
dapia_detection_api/types/: fields.py
openapi_server/: __main__.py
openapi_server/controllers/: default_controller.py
openapi_server/models/: __init__.py  classify_aircraft_request.py  send_message_post200_response.py  send_message_post_request.py
openapi_server/openapi/: openapi.yaml
openapi_server/test/: test_default_controller.py
